--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -2,3 +2,4 @@
 @import 'src/app/components/employee-list/employee-list.component.scss';
 @import 'src/app/components/employee-list-item/employee-list-item.component.scss';
 @import 'src/app/components/employee-actions/employee-actions.component.scss';
+@import 'src/app/components/employee-filter/employee-filter.component.scss';
