Implement EmployeeProfileComponent to disaply employee details

--- a/src/app/components/employee-list-item/employee-list-item.component.html
+++ b/src/app/components/employee-list-item/employee-list-item.component.html
@@ -1,4 +1,4 @@
-<img class="employee-list-item__photo" alt="" />
+<img class="employee-list-item__photo" alt="" [src]="employee.photo" />
 <h3 class="employee-list-item__name">
   {{ employee.name }}
 </h3>
