--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -3,3 +3,4 @@
 @import 'src/app/components/employee-list-item/employee-list-item.component.scss';
 @import 'src/app/components/employee-actions/employee-actions.component.scss';
 @import 'src/app/components/employee-filter/employee-filter.component.scss';
+@import 'src/app/components/employee-profile/employee-profile.component.scss';
