--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -4,3 +4,4 @@
 @import 'src/app/components/employee-actions/employee-actions.component.scss';
 @import 'src/app/components/employee-filter/employee-filter.component.scss';
 @import 'src/app/components/employee-profile/employee-profile.component.scss';
+@import 'src/app/components/employee-edit-form/employee-edit-form.component.scss';
