--- a/src/app/components/employee-list/employee-list.component.html
+++ b/src/app/components/employee-list/employee-list.component.html
@@ -1,4 +1,4 @@
-<ul *ngIf="employees$ | async as employees">
+<ul *ngIf="employees$ | async as employees" class="employee-list">
   <li *ngFor="let employee of employees">
     <app-employee-list-item [employee]="employee"></app-employee-list-item>
   </li>
