--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,7 +1,7 @@
 $white: #fff;
 $silver: #ccc;
 $cyan: #009688;
-$azure: #007bff;
+$azure: #3f51b5;
 $yellow: #ffc107;
 $green: #28a745;
 $red: #dc3545;
