--- a/src/app/components/employee-actions/employee-actions.component.html
+++ b/src/app/components/employee-actions/employee-actions.component.html
@@ -1,14 +1,16 @@
-<button
-  mat-icon-button
-  class="employee-actions__open-profile-button"
-  (click)="openEmployeeProfile()"
->
-  <mat-icon>visibility</mat-icon>
-</button>
-<a
-  mat-icon-button
-  class="employee-actions__edit-employee-link"
-  [routerLink]="['/edit', employee.id]"
->
-  <mat-icon>drive_file_rename_outline</mat-icon>
-</a>
+<div class="employee-actions">
+  <button
+    mat-icon-button
+    class="employee-actions__open-profile-button"
+    (click)="openEmployeeProfile()"
+  >
+    <mat-icon>visibility</mat-icon>
+  </button>
+  <a
+    mat-icon-button
+    class="employee-actions__edit-employee-link"
+    [routerLink]="['/edit', employee.id]"
+  >
+    <mat-icon>drive_file_rename_outline</mat-icon>
+  </a>
+</div>
