--- a/src/app/pages/employee-management/components/employee-list-item/employee-list-item.component.html
+++ b/src/app/pages/employee-management/components/employee-list-item/employee-list-item.component.html
@@ -17,5 +17,8 @@
     <span></span>
     {{ employee.status }}
   </p>
-  <app-employee-actions [employee]="employee"></app-employee-actions>
+  <app-employee-actions
+    class="employee-list-item__actions"
+    [employee]="employee"
+  ></app-employee-actions>
 </div>
