--- a/src/app/shared/components/employee-profile/employee-profile.component.scss
+++ b/src/app/shared/components/employee-profile/employee-profile.component.scss
@@ -7,19 +7,9 @@
   flex-direction: column;
   padding: $gap-md;
 
-  &__title {
-    h3 {
-      @include font-style(26px, 500, $nickel);
-
-      margin: 0;
-    }
-
-    a {
-      color: $cyan;
-    }
-
+  &__header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
   }
 
@@ -28,6 +18,16 @@
     flex-direction: column;
     align-items: center;
     margin: 0 96px;
+  }
+
+  &__title {
+    @include font-style(26px, 500, $nickel);
+
+    flex-grow: 1;
+  }
+
+  &__edit-button {
+    color: $cyan;
   }
 
   &__photo {
@@ -65,6 +65,12 @@
       mat-icon {
         margin-right: $gap-sm;
       }
+    }
+  }
+
+  @media (max-width: 768px) {
+    &__content {
+      margin: 0;
     }
   }
 }
