--- a/src/app/pages/employee-edit/components/employee-edit-form/employee-edit-form.component.html
+++ b/src/app/pages/employee-edit/components/employee-edit-form/employee-edit-form.component.html
@@ -7,7 +7,7 @@
       </a>
     </h3>
     <div class="card__body">
-      <img alt="" [src]="employee.photo" />
+      <img alt="" [src]="employee.photo" loading="lazy" />
     </div>
   </div>
   <div class="card card--form">
