--- a/src/app/pages/employee-management/components/employee-list-item/employee-list-item.component.html
+++ b/src/app/pages/employee-management/components/employee-list-item/employee-list-item.component.html
@@ -1,5 +1,10 @@
 <div class="employee-list-item">
-  <img class="employee-list-item__photo" alt="" [src]="employee.photo" />
+  <img
+    class="employee-list-item__photo"
+    alt=""
+    [src]="employee.photo"
+    loading="lazy"
+  />
   <h3 class="employee-list-item__name">
     {{ employee.name }}
   </h3>
